--- a/resources/views/partials/plain-list.edge
+++ b/resources/views/partials/plain-list.edge
@@ -1,6 +1,6 @@
-<li class="list-group-item d-flex align-items-center">
-    <i class="fas {{ icon }}"></i>
-    <a href="{{ link || text }}" target="_blank" 
+<li class="list-group-item d-flex align-items-center flex-wrap">
+    <img src="{{ icon }}" alt="{{ text }}" height="16px">
+    <a href="{{ link || 'javascript:void(0);' }}" target="_blank" 
     class="ml-2 text-info mr-auto">
         {{ text }}
     </a>
