--- a/resources/views/partials/bootstrap-input.edge
+++ b/resources/views/partials/bootstrap-input.edge
@@ -13,7 +13,9 @@
             <input type="{{ type || 'text' }}" name="{{ name }}" 
             id="{{ dashCase(name) }}" class="form-control {{ addClass ?? ''}}
             {{ flashMessages.has('errors.' + name) ? 'is-invalid' : '' }}"
-            {{ $props.serializeExcept(['name', 'type', 'addClass', 'prepandIcon']) }}>
+            {{ $props.serializeExcept([
+                'name', 'type', 'addClass', 'prepandIcon', 'helperText'
+            ]) }}>
         </div>
 
     @else
@@ -22,7 +24,7 @@
             <div class="icheck-primary">
                 <input type="checkbox" id="{{ dashCase(name) }}" name="{{ name }}"
                 class="{{ flashMessages.has('errors.' + name) ? 'is-invalid' : '' }}"
-                {{ $props.serializeExcept(['name', 'class', 'id']) }}>
+                {{ $props.serializeExcept(['name', 'class', 'id', 'helperText']) }}>
                 <label for="{{ dashCase(name) }}">
                     {{ label }}
                 </label>
@@ -48,7 +50,9 @@
                 <select class="form-control select2bs4 {{ addClass ?? '' }}
                 {{ flashMessages.has('errors.' + name) ? 'is-invalid' : '' }}"
                 name="{{ name }}" style="width: 100%;"
-                {{ $props.serializeExcept(['name', 'class', 'value', 'datum']) }}>
+                {{ $props.serializeExcept([
+                    'name', 'class', 'value', 'datum', 'helperText'
+                ]) }}>
                     @each((data, key) in datum)
                         <option value="{{ data.val }}" 
                         {{ (value == data.val) ? 'selected' : ''  }}>
@@ -76,7 +80,7 @@
                 class="form-control {{ addClass ?? ''}}
                 {{ flashMessages.has('errors.' + name) ? 'is-invalid' : '' }}"
                 id="{{ dashCase(name) }}"
-                {{ $props.serializeExcept(['name', 'type', 'addClass']) }}>
+                {{ $props.serializeExcept(['name', 'type', 'addClass', 'helperText']) }}>
             @end
             
         @end
