--- a/resources/views/partials/heading-section.edge
+++ b/resources/views/partials/heading-section.edge
@@ -1,4 +1,4 @@
 <h1 class="{{ color ? 'text-' + color : 'text-black' }} 
-heading-section text-center mb-16 text-3xl">
+heading-section {{ align ? 'text-' + align : 'text-center' }} mb-20 text-3xl">
     <span>{{ text }}</span>
 </h1>
