--- a/resources/assets/scss/_utilities.scss
+++ b/resources/assets/scss/_utilities.scss
@@ -3,11 +3,17 @@
         @apply transition duration-150 ease-in;
     }
     .hide-el {
-        @apply invisible opacity-0 max-h-0;
+        @apply invisible opacity-0;
+        &-max {
+            @apply invisible opacity-0 max-h-0;
+        }
     }
     .content-from-wysiwyg {
         p {
             margin-bottom: 10px
         }
+    }
+    .hover\:child-underline:hover .text-to-underline {
+        @apply underline;
     }
 }
