--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -1,7 +1,136 @@
 @layout('layouts/app')
 
-@section('body')
-    <header>
-        <a href="">Tentang kami</a>
+@section('header')
+    <header style="background-image: url('{{ primaryCover.filename }}')" 
+    class="h-7/10-screen bg-no-repeat bg-cover flex items-end justify-center">
+        @!component('partials/btn', {
+            text: 'Tentang kami', 
+            bg: 'red-primary',
+            addClass: 'px-10 py-4 transform translate-y-1/2'
+        })
     </header>
+@endsection
+
+@section('body')
+    <section class="bg-red-primary mt-20">
+        <div class="container">
+            <div class="grid grid-cols-2">
+                <figure class="flex items-center py-6">
+                    <img src="/assets/img/content/dummy/sataset.svg" class="rounded-full" 
+                    alt="Sataset {{ aboutUs.cabinet_name }}" height="45px" width="45px">
+                    <figcaption class="text-white px-4">
+                        <p class="font-bold text-lg">Judul</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+                    </figcaption>
+                </figure>
+                <figure class="flex items-center py-6">
+                    <img src="/assets/img/content/dummy/sataset.svg" class="rounded-full" 
+                    alt="Sataset {{ aboutUs.cabinet_name }}" height="45px" width="45px">
+                    <figcaption class="text-white px-4">
+                        <p class="font-bold text-lg">Judul</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+                    </figcaption>
+                </figure>
+            </div>
+        </div>
+    </section>
+    <section class="pt-20 pb-14">
+        <div class="container">
+            @!component('partials/heading-section', {text: 'Berita Terkini'})
+            <div class="grid grid-cols-3 gap-x-6">
+                @each((news, index) in latestNews)
+                    <figure class="relative hover:child-underline">
+                        <img src="{{ news.cover }}" alt="{{ news.title }}">
+                        <figcaption class="font-bold py-4">
+                            <p class="text-to-underline default-transition inline-block pb-2">
+                                <span>{{ news.title }}</span>
+                            </p>
+                        </figcaption>
+                        @!component('partials/stretched-link', {
+                            link: news.title
+                        })
+                    </figure>
+                @end
+            </div>
+        </div>
+    </section>
+    <section class="bg-orange-primary pt-20 pb-24">
+        <div class="container">
+            @!component('partials/heading-section', {
+                text: 'Informasi Terbaru', color: 'white'
+            })
+            <div class="grid grid-cols-3 gap-x-6">
+                @each((news, index) in latestNews)
+                    <figure>
+                        <img src="{{ news.cover }}" alt="{{ news.title }}">
+                    </figure>
+                @end
+            </div>
+        </div>
+    </section>
+    <section class="py-16">
+        <div class="container">
+            @!component('partials/heading-section', {
+                text: 'Salurkan Aspirasi'
+            })
+            <form action="{{ route('aspirations.store') }}" method="POST" 
+            class="form-ajax">
+                <div class="grid grid-cols-11">
+                    @!component('partials/input', {
+                        name: 'name',
+                        label: 'Nama',
+                        required: 'required',
+                        addClass: 'col-span-5'
+                    })
+
+                    <div class="mb-8 col-span-5 col-start-7">
+                        <div class="flex flex-col-reverse">
+                            <select class="bg-gray-normal focus:bg-transparent border 
+                            border-gray-300 cursor-pointer 
+                            {{ flashMessages.has('errors.major') ? 'is-invalid' : '' }}"
+                            name="major" required>
+                                @each(faculty in faculties)
+                                <optgroup label="{{ faculty.name }}">
+                                    @each(major in await faculty.majors)
+                                    <option value="{{ major.name }}">
+                                        {{ major.name }}
+                                    </option>
+                                    @endeach
+                                </optgroup>
+                                @end
+                            </select>
+                            <label for="major" class="mb-2 block relative">
+                                Jurusan / Fakultas
+                            </label>
+                        </div>
+                        <small class="text-red-500 major-error-message"></small>
+                    </div>
+
+                    @!component('partials/input', {
+                        type: 'email',
+                        name: 'email',
+                        label: 'Email',
+                        required: 'required',
+                        addClass: 'col-span-5'
+                    })
+                    @!component('partials/input', {
+                        type: 'select',
+                        name: 'aspiration_category_id',
+                        label: 'Tujuan aspirasi',
+                        required: 'required',
+                        addClass: 'col-span-5 col-start-7',
+                        datum: aspirationCategory
+                    })
+                    @!component('partials/input', {
+                        type: 'textarea',
+                        name: 'message',
+                        label: 'Pesan Aspirasi',
+                        required: 'required',
+                        addClass: 'col-span-full'
+                    })
+                </div>
+                @!component('partials/btn', {link: 'submit', text: 'Salurkan', bg: 'red'})
+            </form>
+        </div>
+    </section>
 @end
