--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -80,7 +80,8 @@
                         name: 'name',
                         label: 'Nama',
                         required: 'required',
-                        addClass: 'col-span-5'
+                        addClass: 'col-span-5',
+                        maxlength: 200
                     })
 
                     <div class="mb-8 col-span-5 col-start-7">
