--- a/resources/views/partials/menu.edge
+++ b/resources/views/partials/menu.edge
@@ -11,7 +11,7 @@
     </a>
     @if(hasDropdown)
         <ul class="flex flex-col absolute hide-el-max default-transition 
-        bg-white px-4 shadow-md rounded-b-md">
+        bg-white px-4 shadow-md rounded-b-md {{ dropdownClass ?? '' }}">
             {{{ await $slots.main() }}}
         </ul>
     @end
