--- a/resources/views/blog/article/index.edge
+++ b/resources/views/blog/article/index.edge
@@ -46,7 +46,7 @@
                                                     text: 'Edit',
                                                     icon: 'fa-edit'
                                                 })
-                                                <a href="{{ route('blog.show', {slug: article.slug}) }}" class="badge badge-primary badge-pill mx-2 external-link" 
+                                                <a href="{{ route('blog.show', {id: article.id}) }}" class="badge badge-primary badge-pill mx-2 external-link" 
                                                 target="_blank">
                                                     <i class="fas fa-external-link-alt"></i>
                                                 </a>
