--- a/resources/views/layouts/admin.edge
+++ b/resources/views/layouts/admin.edge
@@ -69,6 +69,11 @@
                         text: 'Aspirasi Mahasiswa',
                         iconMenu: 'fas fa-th'
                     })
+                    @!component('partials/dashboard-menu', {
+                        url: route('content_page.index'),
+                        text: 'Kontent Page',
+                        iconMenu: 'fas fa-th'
+                    })
                     @component('partials/dashboard-menu', {
                         url: '#',
                         text: 'Contact Us',
