--- a/resources/views/partials/menu.edge
+++ b/resources/views/partials/menu.edge
@@ -5,12 +5,12 @@
         {{ text }}
         @if(hasDropdown)
             <img src="/assets/img/icon/dropdown.svg" 
-            class="ml-2 dropdown-icon transform default-transition"
+            class="ml-2 dropdown-icon transform transition"
             height="10px">
         @end
     </a>
     @if(hasDropdown)
-        <ul class="flex flex-col absolute hide-el-max default-transition 
+        <ul class="flex flex-col absolute hide-el-max transition 
         bg-white px-4 shadow-md rounded-b-md {{ dropdownClass ?? '' }}">
             {{{ await $slots.main() }}}
         </ul>
