--- a/resources/views/layouts/app.edge
+++ b/resources/views/layouts/app.edge
@@ -33,7 +33,7 @@
                     })
                     @!component('partials/menu', {
                         text: 'Makna Logo',
-                        link: route('about_us.logo_meaning')
+                        link: route('logo_meaning')
                     })
                 @end
                 @component('partials/menu', {
