--- a/resources/views/partials/btn.edge
+++ b/resources/views/partials/btn.edge
@@ -1,8 +1,9 @@
 @if(link != 'submit')
     <a href="{{ link ?? 'javascript:void(0);' }}" 
-    class="{{ wider == 'lg' ? 'px-10 py-4' : 'py-3 px-9' }} bg-{{ bg ?? 'bg-transparent' }}
-    transition text-{{ color ?? 'white' }} {{ addClass ?? '' }}"
-    {{ $props.serializeExcept(['color', 'link', 'bg', 'addClass']) }}>
+    class="{{ wider == 'lg' ? 'px-10 py-4' : 'py-3 px-9' }} 
+    bg-{{ bg ?? 'bg-transparent' }} 
+    transition text-{{ color ?? 'white' }} 
+    {{ addClass ?? '' }}" {{ $props.serializeExcept(['color', 'link', 'bg', 'addClass']) }}>
         @if(text)
             {{ text }}
         @elseif(icon)
@@ -11,8 +12,9 @@
     </a>
 @else
     <button type="{{ link }}" class="{{ wider == 'lg' ? 'px-10 py-4' : 'py-3 px-9' }} 
-    bg-{{ bg ?? 'bg-transparent' }} transition text-{{ color ?? 'white' }} 
-    {{ addClass ?? '' }}">
+    bg-{{ bg ?? 'bg-transparent' }} 
+    transition text-{{ color ?? 'white' }} 
+    {{ addClass ?? '' }}" {{ $props.serializeExcept(['color', 'link', 'bg', 'addClass']) }}>
         @if(text)
             {{ text }}
         @elseif(icon)
