--- a/resources/views/layouts/admin.edge
+++ b/resources/views/layouts/admin.edge
@@ -62,6 +62,11 @@
                                 text: 'Konten',
                                 iconMenu: 'far fa-circle nav-icon'
                             })
+                            @!component('partials/dashboard-menu', {
+                                url: route('logo_meaning.manage'),
+                                text: 'Makna logo',
+                                iconMenu: 'far fa-circle nav-icon'
+                            })
                         </ul>
                     @endcomponent
                     @!component('partials/dashboard-menu', {
